--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-location": "^1.2.2",
     "react-scripts": "3.4.1",
     "sweetalert": "^2.1.2",
     "typescript": "~3.7.2"
